  * webcam: Warn when trying to get unknown properties.
  * webcam: Fix header typo: UBIQUITY_GET_CLASS ->
    UBIQUITY_WEBCAM_GET_CLASS.
  * Upgrade to Automake 1.11.3, involving using pkglibexec_PROGRAMS instead
    of pkglib_PROGRAMS.
  * Use a mock resolver during usersetup tests to avoid failing in certain
    network setups.
  * Use mock.patch.object instead of deprecated mock.patch_object.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 10 Feb 2012 20:45:00 +0000

ubiquity (2.9.17) precise; urgency=low

  [ Colin Watson ]
  * Don't display "Ready when you are..." when the installer isn't actually
    waiting for user actions.
  * When waiting for user actions, just hide the progress bar and associated
    widgets rather than displaying "Ready when you are...", to avoid
    confusion associated with a progress bar being displayed when the system
    is in fact waiting for user input (LP: #670409, #925427).
  * Mark file descriptors used for communication with parted_server
    FD_CLOEXEC.
  * Restore finish-install's title after installing the oem-config frontend
    (LP: #925155).
  * Avoid duplicate call to osextras.find_on_path('check-language-support').
  * Stop filtering warnings from the apt module which are no longer emitted.
  * PEP-8 import ordering.
  * Make the "Choose a picture" page translatable (LP: #892384).
  * Make the "run all pending GTK events" function accessible from
    ubiquity.gtkwidgets, and use it in the test suite.  This makes the test
    suite about four seconds faster.
  * Fix sys.path mishandling in test suite.
  * Mark WPA2-only access points as secure.
  * Add initial tests for wireless page.
  * Automatic update of included source packages: choose-mirror 2.39ubuntu3,
    netcfg 1.68ubuntu11.

  [ Brian Murray ]
  * ubiquity/gtk_ui.py: in the crash handler also call apport directly if in
    the maybe-ubiquity mode (LP: #901381)

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 10 Feb 2012 17:27:15 +0000
